# embedded_stm32f401re_rust

./: Cargo.toml  build.rs  run.fish
.cargo/: config.toml
src/: main.rs  old.rs
