[package]
name = "stm32_1"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
#embassy-executor = { version = "0.5.0", features = ["arch-cortex-m"] }
embassy-stm32 = { version = "0.1.0", features = ["stm32f401re", "rt", "defmt", "memory-x", "time"] }
embassy-time = "0.3.1"

embassy-futures

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
