[package]
name = "stm32_1"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "task-arena-size-32768", "executor-thread", "executor-interrupt", "integrated-timers", "defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
#embassy-executor = { version = "0.5.0", features = ["arch-cortex-m"] }
embassy-stm32 = { version = "0.1.0", features = ["stm32f401re", "rt", "defmt", "memory-x", "time", "unstable-pac", "time-driver-any"] }
embassy-time = "0.3.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.2.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
rand = { version = "0.8.5", default-features = false }


[[bin]]
name = "stm32_1"
test = false
bench = false

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
